Docker Project/M3project/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: m3project
          image: axelsilverdew/complex_api
          resources: 
             limits:
                 memory: "128Mi"
                 cpu: "500m"
          ports:
            - containerPort: 3000
